--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@types/*": ["types/*"],
       "@styles/*": ["styles/*"],
+      "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
     },
     "skipLibCheck": true,
